--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "lite-server --baseDir=\"public\favicon.ico\"",
+    "dev": "lite-server --baseDir=\"public\"",
     "watch": "sass --watch src/scss:public/assets/css",
     "start": "concurrently \"npm run watch\" \"npm run dev\""
   },
